Tue May 19 22:54:35 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* time.c (time_minus): always return a Float.  [ruby-dev:38446]

	* time.c (time_to_r): new method.  [ruby-dev:38461]

Tue May 19 13:59:35 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (clone_method): add cast to remove warning from
	  rb_gc_write_barrier().

Tue May 19 13:54:15 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* struct.c (struct_ivar_get): new function to avoid repeated
	  rb_intern() calls.

	* struct.c (rb_struct_iv_get): use struct_ivar_get()

	* struct.c (num_members): ditto.

	* struct.c (rb_struct_s_members): ditto.

	* class.c (rb_singleton_class): cache symbol to reduce calls to
	  rb_intern().

Tue May 19 07:52:05 2009  Tanaka Akira  <akr@fsij.org>

	* test/test_time.rb: make tests timezone independent.
	  reported by zunda.  [ruby-dev:38492] 

Mon May 18 21:40:11 2009  Tanaka Akira  <akr@fsij.org>

	* lib/pathname.rb (Pathname#sub): suppress a warning.  [ruby-dev:38488]

Sun May 17 23:23:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (SRC_EXT): should be flat.
	  http://twitter.com/_tad_/status/1825862632

Sun May 17 23:05:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): VARIABLE_LIBPATH is always
	  defined, see its value instead.

Sun May 17 18:59:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* node.h (nd_line): NODE_LMASK is not needed.

	* node.h (NOEX_SAFE): made int.

Sun May 17 14:23:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (rb_parse_in_eval): returns true in true eval, not in
	  main.  [ruby-dev:38382]

	* parse.y (program): inherits dvars in eval or main.

Sun May 17 14:02:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_script): sets also VM toplevel program name.

	* ruby.c (process_options): no longer needs additional frame.

	* vm.c (rb_vm_get_sourceline): should not access out of bound.

Sun May 17 09:47:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
