@@ -1,3 +1,8 @@
+Wed May 20 00:05:52 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* vm_method.c (rb_attr): should preserve encoding info.
+	  [ruby-dev:38498]
+
 Tue May 19 22:54:35 2009  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* time.c (time_minus): always return a Float.  [ruby-dev:38446]
